--- a/.github/workflows/rust_build.yml
+++ b/.github/workflows/rust_build.yml
@@ -9,7 +9,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
+        os: [ubuntu-latest, windows-latest]
         rust: [stable]
         python-version: ['3.11']
 
